# registration-pipeline

./: .gitignore  README.md  environment.yml  get_landmarks_from_points.py  get_registration.py  nhdr_write.py  pyproject.toml  reg-pipe  template_maker.py
registration_pipeline/: __main__.py  itk_rigid_landmark.py  landmarks.py  napari_plugin.py  registration_config.py  wrap_cmtk.py
registration_pipeline/_tests/: __init__.py  test_cmtk.py  test_config.py  test_landmark_class.py  test_plugin.py
